# ExplainableBoostedMachine

./: README.md  pyproject.toml
ScratchCode/: boosting_algorithm.py  explainable_boosted_machine.py
models/: ebm.ipynb  logisticregression.py  masterPerformancePlot.py  neuralnetwork.py  svm.py  xgb.py
